Fixed the overlap among divs

--- a/css/home.css
+++ b/css/home.css
@@ -4,10 +4,11 @@ body{
     font-family: Comic Sans MS;
 }
 .window_big {
-    width:100%;
+    width:25%;
+    min-width:320px;
     position: fixed;
-    top:70px;
-    left: 3%;
+    top:5%;
+    right: 10px;
     max-width: 760px;
 }
 
@@ -56,8 +57,8 @@ body{
 
 /*style for first intro*/
 .intro{
-    position:fixed;
-    top:140px;
+    position:relative;
+    top:15%;
     width:100%;
     height:40%;
     min-height:280px;
